--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/packages.config
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/packages.config
@@ -2,6 +2,38 @@
 <packages>
   <package id="Caliburn.Micro" version="4.0.230" targetFramework="net462" />
   <package id="Caliburn.Micro.Core" version="4.0.230" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.ObjectPool" version="8.0.11" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Net.Http.Headers" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
+  <package id="NLog" version="6.0.4" targetFramework="net48" />
+  <package id="NLog.Extensions.Logging" version="6.0.4" targetFramework="net48" />
+  <package id="NLog.Web.AspNetCore" version="6.0.4" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
