Added navigation to details. Added string localization. Updated docs.

--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/Napps.Windows.Assessment.csproj
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/Napps.Windows.Assessment.csproj
@@ -173,6 +173,7 @@
     </ApplicationDefinition>
     <Compile Include="Configuration\Config.cs" />
     <Compile Include="Configuration\ConfigManager.cs" />
+    <Compile Include="Converters\PrivacyEnumToStringConverter.cs" />
     <Compile Include="Domain\Author.cs" />
     <Compile Include="Domain\Name.cs" />
     <Compile Include="Domain\Presentation.cs" />
@@ -197,13 +198,33 @@
     <Compile Include="Utils\CrashReporter.cs" />
     <Compile Include="Utils\DependencyContainer.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\PresentationDetailViewModel.cs" />
     <Compile Include="ViewModels\PresentationListViewModel.cs" />
+    <Compile Include="Views\PresentationDetailView.xaml.cs">
+      <DependentUpon>PresentationDetailView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PresentationListItemView.xaml.cs">
       <DependentUpon>PresentationListItemView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PresentationListView.xaml.cs">
       <DependentUpon>PresentationListView.xaml</DependentUpon>
     </Compile>
+    <Page Include="Styles\ButtonStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\ContentControlStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\ListBoxItemStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\TextStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -216,6 +237,10 @@
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\PresentationDetailView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\PresentationListItemView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -240,8 +265,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -255,6 +281,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Assets\prezi.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
